responsive design; bug discovered on ul word wrap

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,18 +1,26 @@
-/* * {
+* {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #EFEFEF;
+  background-color: #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
+.active {
+  color: white;
+  background-color: #D9D9D9;
+}
+
 .nav {
-  background-color: #A9A9A9;
+  background-color: #EFEFEF;
+  color: #4484CE;
   overflow: hidden;
   display: flex;
   width: 100%;
+  position: sticky;
+  top: 0;
 }
 
 .nav a {
@@ -20,20 +28,65 @@ body {
   text-align: center;
   text-decoration: none;
   font-family: Helvetica;
+  font-size: 18px;
+  color: #4484CE;
+  transition: 0.5s;
+}
+
+.nav a:hover {
+  background-color: #4484CE;
+  color: white;
 }
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 1%;
-  height: 250px;
+  min-height: 25px;
+  max-height: 200px;
+  overflow-x: auto;
   overflow-y: auto;
   text-align: justify;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+}
+
+ul li {
+  background: #FFFFFF;
+  padding: 3%;
+  margin: 2%;
+  align-items: center;
+  border-radius: 3px;
+  word-wrap: break-word;
+}
+
+.close {
+  float: right;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.close:hover {
+  background-color: #4484CE;
+  color: white;
 }
 
 input:hover {
-  background-color: #FF3B3F;
+  background-color: #4484CE;
   color: #FFFFFF;
+}
+
+input[type=button] {
+  padding: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.box-buttons input[type=button] {
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 5%;
 }
 
 textarea {
@@ -44,19 +97,20 @@ textarea {
   color: #535B60;
   resize: none;
   text-indent: 0;
+  border-radius: 5px;
 }
-/*
-#buttons {
-  justify-content: center;
-} */
 
 
-/* .flex-container {
+.flex-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 500px;
+  min-width: 500px;
   margin:0px auto;
+  margin-bottom: 50px;
+  padding-left: 20%;
+  padding-right: 20%;
+  flex-wrap: wrap-reverse;
 }
 
 .flex-container > div {
@@ -65,63 +119,23 @@ textarea {
   width: 100%;
 }
 
-#timeline div {
+#timeline {
   display: inline-flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   position: relative;
-} */
-
-.close {
-  /* position: absolute;
-  right: 0;
-  top: 0; */
-  padding: 12px 16px 12px 16px;
 }
 
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-/* div {
+div {
   display: inline-block;
   text-align: center;
   align-items: center;
 }
 
-/* #primary-menu a {
-  font-family: Helvetica;
-  text-decoration: none;
-} */
-
-/* #nav a {
-  padding: 16px;
-  color: #4484CE;
-  background-color: #FFFFFF;
-  text-align: center;
-  text-
-  text-decoration: none;
-  border-right: 1px solid #D9D9D9
-} */
-/*
-
-h1 {
-  font-family: Arial;
-  color: red;
+p {
+  text-align: left;
 }
 
-nav {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-nav a:hover {
-  color: #4484CE;
-  background-color: #D9D9D9;
-}
-
-.active {
-  color: white;
-  background-color: #4484CE;
+img {
+  border-radius: 50%;
 }
